devel/ultimatepp/files/logs
----- Draw ( GUI GCC SHARED BLITZ POSIX BSD OSX ) (28 / 38)
BLITZ: Font.cpp FontWin32.cpp FontFc.cpp FontCocoNOMM.cpp Draw.cpp DrawText.cpp DrawData.cpp ImageAnyDraw.cpp DrawUtil.cpp DrawTextUtil.cpp Display.cpp Image.cpp ImageBlit.cpp RasterFormat.cpp RasterWrite.cpp Palette.cpp Raster.cpp RasterEncoder.cpp ImageOp.cpp ImageChOp.cpp Mify.cpp ImageScale.cpp RescaleFilter.cpp MakeCache.cpp DrawRasterData.cpp Uhd.cpp Iml.cpp DDARasterizer.cpp SDrawClip.cpp SDrawPut.cpp SDrawText.cpp SDraw.cpp SImageDraw.cpp Cham.cpp SColors.cpp
plugin/png: 3 file(s) built in (0:28.14), 9381 msecs / file
FontCR.cpp
RichEdit: 30 file(s) built in (0:48.64), 1621 msecs / file
FontCoco.mm
Drawing.cpp
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Draw/FontCoco.mm: In function 'Upp::Vector<Upp::FaceInfo> Upp::GetAllFacesSys()':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Draw/FontCoco.mm:271:22: error: narrowing conversion of 'kCTFontScriptsClass' from 'int' to 'unsigned int' [-Wnarrowing]
  271 |                 case kCTFontScriptsClass:
      |                      ^~~~~~~~~~~~~~~~~~~
Draw: 38 file(s) built in (1:04.93), 1708 msecs / file

There were errors. (8:38.79)
Command failed: CXX=/opt/local/bin/g++-mp-14 ./umk ./uppsrc ide GCC -brs ./theide
Exit code: 1
